--- a/style.scss
+++ b/style.scss
@@ -100,3 +100,24 @@
         }
     }
 }
+.gradient {
+    background: #000;
+}
+.headerhide {
+    display: none;
+}
+.blockadd {
+    width: 100%;
+    height: 600px;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    &_block {
+        width: 1063px;
+        height: 1299px;
+        flex-shrink: 0;
+        background: #3B3B3B;
+        transform: translateY(-500px);
+        z-index: 7;
+    }
+}
