--- a/style.scss
+++ b/style.scss
@@ -86,7 +86,7 @@
             align-items: center;
             &_a {
                 text-decoration: none;
-                color: #414141;
+                color: #ffffff;
                 font-family: Raleway;
                 font-size: 15px;
                 font-style: normal;
@@ -120,4 +120,7 @@
         transform: translateY(-500px);
         z-index: 7;
     }
+}
+.justmenu {
+    display: none;
 }
