--- a/stylepur.css
+++ b/stylepur.css
@@ -162,6 +162,157 @@
   line-height: normal;
   width: 55%;
 }
+.blockadd_block_under {
+  height: 233px;
+  width: 948px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.blockadd_block_under_right {
+  position: relative;
+  width: 722px;
+  height: 233px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.blockadd_block_under_right_img1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90px;
+  height: 45px;
+}
+.blockadd_block_under_right_p1 {
+  margin-top: 15px;
+  width: 100%;
+  height: 40px;
+  color: #FFF;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.blockadd_block_under_right_down {
+  width: 100%;
+  height: 177px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.blockadd_block_under_right_down_pn1 {
+  height: 60px;
+  width: 100%;
+}
+.blockadd_block_under_right_down_pn1_p1 {
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  transform: translateY(-4px);
+}
+.blockadd_block_under_right_down_pn1_input {
+  width: 307px;
+  height: 37px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #202020;
+  outline: none;
+  border: none;
+}
+.blockadd_block_under_right_down_pn2 {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  -moz-column-gap: 22px;
+       column-gap: 22px;
+}
+.blockadd_block_under_right_down_pn2_yyyy {
+  height: 100%;
+  width: 131px;
+}
+.blockadd_block_under_right_down_pn2_yyyy_p1 {
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  transform: translateY(-4px);
+}
+.blockadd_block_under_right_down_pn2_yyyy_input {
+  width: 127px;
+  height: 37px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #202020;
+  border: none;
+}
+.blockadd_block_under_right_down_pn2_cvc {
+  width: 82px;
+  height: 100%;
+}
+.blockadd_block_under_right_down_pn2_cvc_input {
+  width: 78px;
+  height: 37px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #202020;
+  border: none;
+}
+.blockadd_block_under_right_down_pn3 {
+  height: 37px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blockadd_block_under_right_down_pn3_btn {
+  width: 145px;
+  height: 37px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #202020;
+  color: #FFF;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blockadd_block_under_right_down_pn3_left {
+  width: 404px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.blockadd_block_under_right_down_pn3_left_p1 {
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.blockadd_block_under_right_down_pn3_left_icon {
+  width: 15px;
+  height: 15px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #202020;
+}
 
 .footer {
   height: 280px;
@@ -255,4 +406,9 @@
   z-index: 3;
   transform: translateY(100%);
   transition-duration: 0.4s;
+}
+
+.justmenu {
+  width: 44px;
+  height: auto;
 }/*# sourceMappingURL=stylepur.css.map */
